--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
 body {
     min-height: 100vh;
     display: grid;
-    grid-template-columns: 15% 1fr;
+    grid-template-columns: 25% 1fr;
     grid-template-rows: 25fr 75fr;
     grid-template-areas: 
     "sidebar header"
@@ -31,7 +31,7 @@ body {
 }
 
 .header {
-    background-color: var(--emerald50);
+    background-color: var(--emerald100);
     color: var(--emerald950);
     grid-area: header;
     display: flex;
@@ -59,31 +59,64 @@ body {
 }
 
 .sidebar form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     padding: 10px;
+    gap: 10px;
+}
+
+.sidebar form #new-book-read {
+    justify-self: flex-start;
 }
 
 .main {
-    background-color: var(--emerald100);
+    background-color: var(--emerald200);
     grid-area: main;
     padding: 15px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 150px);
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, 200px);
     grid-template-rows: 250px;
     grid-auto-rows: 250px;
     gap: 25px;
 }
 
 .main > div{
-    background-color: var(--emerald50);
+    background-color: var(--emerald100);
     border: 1px solid var(--emerald600);
     border-top: 5px solid var(--emerald600);
     border-radius: 10px;
     padding: 10px;
+    display: grid;
+    grid-template-rows: 2fr 1fr .5fr 1fr;
+    justify-content: space-around;
+    gap: 15px;
 }
 
-.main > .unread {
+.main > div > .book-title {
+    text-align: center;
+}
+
+.main > div > .book-author {
+    text-align: center;
+}
+
+.main > div > .book-pages {
+    text-align: center;
+}
+
+.main > div > .buttons {
+    display: flex;
+    gap: 15px;
+}
+
+.main > div > button {
+    width: (calc(50% - 10px));
+    padding: 10px 15px;
+
+}
+
+.main > div.unread {
     border: 1px solid var(--invalid);
     border-top: 5px solid var(--invalid);
 }
